[package]
name = "createdat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
sanitize-filename = "0.5.0"
mime_guess = "2.0.4"
owo-colors = "4.0.0"
inquire = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"
